test .env db in production

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_URI = mongodb+srv://adminrbr:XLb6tF8oA62GgcHd@cluster-rbr.dgeduug.mongodb.net/
-rbrdb
+NEXT_PUBLIC_MONGODB_URI = mongodb+srv://adminrbr:XLb6tF8oA62GgcHd@cluster-rbr.dgeduug.mongodb.net/
